{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 140,
  "lineage": "2374b17a-85ba-8aae-2c57-a5f4a7343824",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-30T13:33:38.629-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nohaproject-354114/global/firewalls/firewall-allow-ssh",
            "log_config": [],
            "name": "firewall-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/networks/main-network",
            "priority": 1000,
            "project": "nohaproject-354114",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/firewalls/firewall-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-30T13:33:38.615-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nohaproject-354114/global/firewalls/fw-allow-iap",
            "log_config": [],
            "name": "fw-allow-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/networks/main-network",
            "priority": 1000,
            "project": "nohaproject-354114",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/firewalls/fw-allow-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220712",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/zones/us-central1-a/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nohaproject-354114/zones/us-central1-a/instances/private-vm",
            "instance_id": "800614076438293343",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "D3ku8f4nufo=",
            "name": "private-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/networks/main-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/regions/us-central1/subnetworks/management-subnet",
                "subnetwork_project": "nohaproject-354114"
              }
            ],
            "project": "nohaproject-354114",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/zones/us-central1-a/instances/private-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.main-network",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/nohaproject-354114/global/networks/main-network",
            "mtu": 0,
            "name": "main-network",
            "project": "nohaproject-354114",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/networks/main-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T13:33:51.678-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/nohaproject-354114/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/networks/main-network",
            "project": "nohaproject-354114",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/regions/us-central1/routers/router"
          },
          "dependencies": [
            "google_compute_network.main-network",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "nohaproject-354114/us-central1/router/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "nohaproject-354114",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/nohaproject-354114/regions/us-central1/subnetworks/management-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.router",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "nohaproject-354114/us-central1/router/my-router-nat2",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat2",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "nohaproject-354114",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/nohaproject-354114/regions/us-central1/subnetworks/restricted-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.router",
            "google_compute_subnetwork.restricted_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T13:33:38.792-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/nohaproject-354114/regions/us-central1/subnetworks/management-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/networks/main-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "nohaproject-354114",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/regions/us-central1/subnetworks/management-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T13:33:39.170-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/nohaproject-354114/regions/us-central1/subnetworks/restricted-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/global/networks/main-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "nohaproject-354114",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.16.0.0/16",
                "range_name": "gke-private-cluster-pods-c7501478"
              },
              {
                "ip_cidr_range": "10.12.0.0/16",
                "range_name": "gke-private-cluster-services-c7501478"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nohaproject-354114/regions/us-central1/subnetworks/restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main-network"
          ]
        }
      ]
    }
  ]
}